# ha_fade_lights

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
custom_components/fade_lights/: __init__.py  autoconfigure.py  config_flow.py  const.py  easing.py  expected_state.py  fade_change.py  fade_params.py  manifest.json  models.py  notifications.py  services.yaml  strings.json  websocket_api.py
custom_components/fado/: __init__.py  autoconfigure.py  config_flow.py  const.py  coordinator.py  entity_fade_state.py  expected_state.py  fade_change.py  fade_params.py  (+5 more)
tests/: __init__.py  conftest.py  test_apply_step.py  test_autoconfigure.py  test_brightness_params.py  test_brightness_restoration.py  test_calculate_changes.py  test_capability_filtering.py  test_color_params.py  test_color_temp_bounds.py  test_config_flow.py  test_coverage_gaps.py  test_easing.py  test_event_waiting.py  test_execute_fade_colors.py  test_expected_state_colors.py  test_fade_change.py  test_fade_execution.py  test_get_current_color_state.py  test_hybrid_change_calculators.py  test_init.py  test_manual_interruption.py  test_manual_intervention_colors.py  test_mireds_to_hs_fade.py  test_notifications.py  test_parameter_combinations.py  test_planckian_locus.py  test_resolve_fade.py  test_resolver_helpers.py  test_restore_intended_colors.py  test_services.py  test_step_generation.py  test_storage.py  test_websocket_api.py
(+22 files in other folders)
